--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
   flutter_spinkit: ^5.1.0
+  flutter_riverpod: ^2.2.0
+  go_router: ^6.2.0
 
 dev_dependencies:
   flutter_test:
